# graph-my-entities

./: Dockerfile  README.md  pyproject.toml
src/: connection.py  main.py  orm.py
